--- a/StorhaugenWebsite/Pages/FoodDetails.razor
+++ b/StorhaugenWebsite/Pages/FoodDetails.razor
@@ -14,7 +14,7 @@
             </div>
             <h2 class="empty-state-title">Please sign in</h2>
             <p class="empty-state-text">You need to be signed in to view meals</p>
-            <MudButton Variant="Variant.Filled" Color="Color.Primary" Href="/login" Size="Size.Large">
+            <MudButton Variant="Variant.Filled" Color="Color.Primary" Href="login" Size="Size.Large">
                 Go to Login
             </MudButton>
         </div>
