--- a/StorhaugenWebsite/Pages/Login.razor
+++ b/StorhaugenWebsite/Pages/Login.razor
@@ -63,7 +63,7 @@
         await AuthService.InitializeAsync();
         if (AuthService.IsAuthorized)
         {
-            Navigation.NavigateTo("/");
+            Navigation.NavigateTo("");
         }
     }
 
@@ -77,7 +77,7 @@
 
         if (success)
         {
-            Navigation.NavigateTo("/");
+            Navigation.NavigateTo("");
         }
         else
         {
