--- a/StorhaugenWebsite/App.razor
+++ b/StorhaugenWebsite/App.razor
@@ -18,7 +18,7 @@
                 <MudIcon Icon="@Icons.Material.Filled.SearchOff" Size="Size.Large" Color="Color.Secondary" Class="mb-4" />
                 <MudText Typo="Typo.h4" Class="mb-2">Page Not Found</MudText>
                 <MudText Typo="Typo.body1" Color="Color.Secondary" Class="mb-4">The page you're looking for doesn't exist.</MudText>
-                <MudButton Variant="Variant.Filled" Color="Color.Primary" Href="/">Go Home</MudButton>
+                <MudButton Variant="Variant.Filled" Color="Color.Primary" Href="">Go Home</MudButton>
             </MudContainer>
         </LayoutView>
     </NotFound>
