--- a/StorhaugenWebsite/Shared/MainLayout.razor
+++ b/StorhaugenWebsite/Shared/MainLayout.razor
@@ -34,7 +34,7 @@
                     <MudIcon Icon="@(IsActive("") ? Icons.Material.Rounded.Home : Icons.Material.Outlined.Home)" Size="Size.Small" />
                     <span>Home</span>
                 </button>
-                <button class="nav-item nav-item-add @(IsActive("/add") ? "active" : "")" @onclick="@(() => Navigate("add"))">
+                <button class="nav-item nav-item-add @(IsActive("add") ? "active" : "")" @onclick="@(() => Navigate("add"))">
                     <div class="add-button">
                         <MudIcon Icon="@Icons.Material.Rounded.Add" Size="Size.Medium" />
                     </div>
